Fix date input picker overflow

--- a/src/themes/corteza-base/custom.scss
+++ b/src/themes/corteza-base/custom.scss
@@ -55,8 +55,6 @@ th {
 
 .vue-grid-item {
   transition: none !important;
-  overflow-x: hidden;
-  overflow-y: auto;
 }
 
 .v-select {
